kano-settings (4.1.0-0) unstable; urgency=low

  * Added a simplistic system integrity script to verify debian packages.
  * Removed default RPi2 CPU frequency settings from config.txt
  * Mechanism to ensure SK display orientation consistency if EDID is lost
  * Fix inconsistent Settings > Display > Resolution: Auto behaviour for
    displays with corrupted EDID

 -- Team Kano <dev@kano.me>  Thu, 27 Sep 2018 12:11:00 +0100

kano-settings (4.0.6-0) unstable; urgency=low

  * Changes for Kano OS 4.0.0:
  * Fixed an issue with automatic resolution setting for screens with aspect
    ratios that are not 4:3, 16:9, 16:10
  * Fix support for Gtk packages included with Stretch
  * Fixed Safe Mode configuration sometimes not getting applied correctly
  * Changed to require immediate reboot when adding an account.
  * Avoid traceback if bluetooth service failed to start.

 -- Team Kano <dev@kano.me>  Fri, 22 Jun 2018 10:17:00 +0100

kano-settings (4.0.5-0) unstable; urgency=low

  * Changes for Kano OS 3.15.0:
  * Fixed long delay when going into the Notifications menu
  * Disabled hdmi_drive config option when going into Safe Mode
  * Add splash animation for Settings app
  * Fixed the Wi-Fi refresh screen on connection failure
  * Create test coverage report
  * Run tests on push
  * Fixed applying setting when clicking on Flip Screen option

 -- Team Kano <dev@kano.me>  Wed, 24 Jan 2018 14:15:00 +0100

kano-settings (4.0.4-1) unstable; urgency=low

  * Changes for Kano OS 3.14.1:
  * Disabled hdmi_drive config option when going into Safe Mode
  * Make safe mode use the preferred mode of the screen
  * Fixed bug that causes no timeout on Wi-Fi failure

 -- Team Kano <dev@kano.me>  Tue, 16 Feb 2018 15:39:30 +0100

kano-settings (4.0.4-0) unstable; urgency=low

  * Changes for Kano OS 3.14.0:
  * Reduced execution time of kano-safeboot-mode reducing time to boot by ~3.5s
  * Migrated parental whitelist over to use the master branch