@@ -5,6 +5,7 @@ kano-settings (4.1.0-0) unstable; urgency=low
   * Mechanism to ensure SK display orientation consistency if EDID is lost
   * Fix inconsistent Settings > Display > Resolution: Auto behaviour for
     displays with corrupted EDID
+  * Switch to use the "dtparam" value to check for config.txt corruption
 
  -- Team Kano <dev@kano.me>  Thu, 27 Sep 2018 12:11:00 +0100
 
